@@ -21,7 +21,7 @@
 ###################################################################
 
 ba.game <- function(n, power=1, m=NULL, out.dist=NULL, out.seq=NULL,
-                    out.pref=FALSE, directed=TRUE) {
+                    out.pref=FALSE, directed=TRUE, time.window=NULL) {
 
   # Checks
   if (! is.null(out.seq) && (!is.null(m) || !is.null(out.dist))) {
@@ -40,6 +40,9 @@ ba.game <- function(n, power=1, m=NULL, out.dist=NULL, out.seq=NULL,
   }
   if (!is.null(m) && m<0) {
     stop("`m' is negative")
+  }
+  if (!is.null(time.window) && time.window <= 0) {
+    stop("time window size should be positive")
   }
   if (!is.null(m) && m==0) {
     warning("`m' is zero, graph will be empty")
@@ -67,7 +70,11 @@ ba.game <- function(n, power=1, m=NULL, out.dist=NULL, out.seq=NULL,
     out.seq <- numeric()
   }
 
-  if (power==1) {    
+  if (!is.null(time.window)) {
+    .Call("R_igraph_recent_degree_game", n, power, time.window, m, out.seq,
+          out.pref, directed,
+          PACKAGE="igraph")
+  } else if (power==1) {    
     .Call("R_igraph_barabasi_game", n, m, out.seq, out.pref, directed,
           PACKAGE="igraph")
   } else {
@@ -170,60 +177,4 @@ establishment.game <- function(nodes, types, k=1, type.dist=rep(1, types),
         as.double(types), as.double(k), as.double(type.dist),
         matrix(as.double(pref.matrix), types, types),
         as.logical(directed))
-}
-        
-recent.degree.game <- function(n, power=1, window,
-                               m=NULL, out.dist=NULL, out.seq=NULL,
-                               out.pref=FALSE, directed=TRUE) {
-
-  # Checks
-  if (! is.null(out.seq) && (!is.null(m) || !is.null(out.dist))) {
-    warning("if `out.seq' is given `m' and `out.dist' should be NULL")
-    m <- out.dist <- NULL
-  }
-  if (is.null(out.seq) && !is.null(out.dist) && !is.null(m)) {
-    warning("if `out.dist' is given `m' will be ignored")
-    m <- NULL
-  }
-  if (!is.null(out.seq) && length(out.seq) != n) {
-    stop("`out.seq' should be of length `n'")
-  }
-  if (!is.null(out.seq) && min(out.seq)<0) {
-    stop("negative elements in `out.seq'");
-  }
-  if (!is.null(m) && m<0) {
-    stop("`m' is negative")
-  }
-  if (window <= 0) {
-    stop("time window size `window' should be positive")
-  }
-  if (!is.null(m) && m==0) {
-    warning("`m' is zero, graph will be empty")
-  }
-  if (power < 0) {
-    warning("`power' is negative")
-  }
-  
-  if (is.null(m) && is.null(out.dist) && is.null(out.seq)) {
-    m <- 1
-  }  
-  
-  n <- as.numeric(n)
-  if (!is.null(m)) { m <- as.numeric(m) }
-  if (!is.null(out.dist)) { out.dist <- as.numeric(out.dist) }
-  if (!is.null(out.seq)) { out.seq <- as.numeric(out.seq) }
-  out.pref <- as.logical(out.pref)
-
-  if (!is.null(out.dist)) {
-    out.seq <- as.numeric(sample(0:(length(out.dist)-1), n,
-                                 replace=TRUE, prob=out.dist))
-  }
-
-  if (is.null(out.seq)) {
-    out.seq <- numeric()
-  }
-
-  .Call("R_igraph_recent_degree_game", n, power, window, m, out.seq,
-        out.pref, directed,
-        PACKAGE="igraph")
 }
